--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
+.background {
+    background-image: url(/images/banner/bannerA4-64.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 500px;
+}
+
 label {
     width: 100px;
     display: inline-block;
